Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126722

WebEngine: GPU detection is missing "VmWare" in vendor list

XMLWordPrintable

    • Linux/Other display system
    • 791ee8106 (dev), 83e85bebc (6.8), f836f02e8 (6.7), 0738a7eca (dev), e6c6ea2f6 (6.9), 97947de3e (6.8), b6310c007 (tqtc/lts-6.5)

      The new GPU detection does not support the vmwgfx VMware graphics driver.

      This causes some warnings during startup.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kchehlarski Kaloyan Chehlarski
            stefanbauer Stefan Bauer
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes