Add more vendors to GPU detection

This change expands the list of GPU vendors in the web engine context
creation code. The original list was based on code inside Dawn,
whereas this change adds entries from an equivalent list in ANGLE.
This removes some startup warnings for a few more exotic system
configurations (e.g. VMWare virtual machines).

Fixes: QTBUG-126722
Pick-to: 6.8 6.7
Change-Id: I5548cc0677f80e02439e7c4cfc3ab1d680d10971
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>